[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geppetto-server"
version = "0.1.0"
description = "REST config service for Geppetto agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Dave Seff", email = "dave@seff.com.au"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
geppetto-config-server = "geppetto_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geppetto_server"]
